@@ -605,6 +605,10 @@ div.progressBar div.background {
   background: #eef;
 }
 
+tr.disabled_host a{
+	color: grey;
+}
+
 /* Syntax Highlighting */
 .ruby .normal {}
 .ruby .comment { color: #005; font-style: italic; }
